Use Stream.toList() instead of Stream.collect(toList())